--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,15 @@ description = "Safe rsync-based backup tool with mount validation and snapshot r
 license = "GPL-3.0-or-later"
 
 [dependencies]
+anyhow = "1"
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9"
-signal-hook = "0.3"
+tempfile = "3"
+thiserror = "1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 walkdir = "2"
 
 [package.metadata.deb]
@@ -20,6 +25,8 @@ assets = [
   ["timevault.example.yaml", "usr/share/doc/timevault/timevault.example.yaml", "644"],
   ["timevault.service", "lib/systemd/system/timevault.service", "644"],
   ["timevault.timer", "lib/systemd/system/timevault.timer", "644"],
+  ["COMPATIBILITY.md", "usr/share/doc/timevault/COMPATIBILITY.md", "644"],
+  ["PACKAGING.md", "usr/share/doc/timevault/PACKAGING.md", "644"],
   ["README.md", "usr/share/doc/timevault/README.md", "644"],
   ["LICENSE", "usr/share/doc/timevault/LICENSE", "644"],
 ]
